Fix older posts button positioning after loading posts.
This fixes one of the issues reported in #2179

There is currently another issue after clicking the "Older Posts"
button, which causes the posts to overlap each other. This will be fixed
in another PR.

--- a/altofocus/style.css
+++ b/altofocus/style.css
@@ -3189,10 +3189,16 @@ body {
   clear: both;
   display: block;
   padding: 1.75em 10%;
-  position: absolute;
   text-align: center;
   width: 100%;
   z-index: 1;
+  position: relative;
+  float: left;
+  top: 100%;
+}
+
+.infinity-success #infinite-handle {
+	top: auto !important;
 }
 
 #infinite-handle span {
